# helioschedule

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
data/: README.md  generate_beams.py
examples/2024b/: Makefile  beams2.hdf5  example.yaml  observations.csv  solar_noons.csv  targets.csv
helioschedule/: beam_interp.py  convert_coordinates.py  generate_observation_script.py  get_flags.py  get_local_noons.py  schedule.py
notebooks/: John_MWA_Dwell.ipynb  John_MWA_Dwell.yaml  John_MWA_Dwell_solo_2024.ipynb  John_MWA_Dwell_solo_2024.yaml  John_MWA_FR_Triggered_1.ipynb  John_MWA_FR_Triggered_1.yaml
test/: .gitignore  Makefile  compare_observations.py  flags_reference.json  observations_reference.csv  schedule_reference.sh  solar_noons_reference.csv  targets_reference.csv  test.yaml
