[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "helioschedule"
version = "0.0.1"
description = "Schedule MWA observations close to the Sun"
authors = [
  { name = "John Morgan" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[project.scripts]
get_local_noons = "helioschedule.get_local_noons:main"
get_flags = "helioschedule.get_flags:main"
convert_coordinates = "helioschedule.convert_coordinates:main"
schedule = "helioschedule.schedule:main"
generate_observation_script  = "helioschedule.generate_observation_script:main"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["helioschedule"]
force_sort_within_sections = true

